feat: recipe previews search endpoint added
