# server/src/helpers/ExtractFromRecipe.ts
@@ -1,8 +1,12 @@
 import type { Recipe, PrivateRecipe, PublicRecipe } from '@monorepo/shared';
+import type { RecipePreview } from '../types/recipes.js';
 
 type BasePrivateRecipeData = Omit<PrivateRecipe, 'creator' | 'image_src'>;
 
 type BasePublicRecipeData = Omit<PublicRecipe, 'creator' | 'image_src'>;
+
+type BaseRecipePreview = Omit<RecipePreview, 'creator' | 'id' | 'image_src'> &
+	Pick<Recipe, 'image_filename'>;
 
 export class ExtractFromRecipe {
 	static basePrivateData(recipeData: Recipe): BasePrivateRecipeData {
@@ -36,5 +40,23 @@ export class ExtractFromRecipe {
 		const { visibility, ...rest } = this.basePrivateData(recipeData);
 
 		return { ...rest };
+	}
+
+	static basePreview(recipeData: Recipe): BaseRecipePreview {
+		const {
+			title,
+			description,
+			createdAt,
+			image_filename,
+			timeSpent: { cookTime, prepTime },
+		} = recipeData;
+
+		return {
+			title,
+			description: description.slice(0, 200),
+			createdAt,
+			image_filename,
+			totalTimeSpent: prepTime + (cookTime ?? 0),
+		};
 	}
 }
